syntax = "proto3";

import "value.proto";
import "protointerface.proto";
import "relational_frame.proto";
import "graph_frame.proto";
import "document_frame.proto";

option java_multiple_files = true;
option java_package = "org.polypheny.db.protointerface.proto";
option java_outer_classname = "StatementResponses";

package polypheny.protointerface;

message StatementResponse {
  int32 statement_id = 1;
  optional StatementResult result = 2;
}

message StatementResult {
  int64 scalar = 1;
  optional Frame frame = 2;
}

message StatementBatchResponse {
  int32 batch_id = 1;
  repeated int64 scalars = 2;
}

message PreparedStatementSignature {
  int32 statement_id = 1;
  repeated ParameterMeta parameter_metas = 2;
}

message ParameterMeta {
  int32 precision = 1;
  int32 scale = 2;
  string type_name = 3;
  optional string parameter_name = 4;
  string name = 5;
}

message CloseStatementResponse {
}

message Frame {
  bool isLast = 1;
  oneof result {
    RelationalFrame relational_frame = 2;
    GraphFrame graph_frame = 3;
    DocumentFrame document_frame = 4;
  }
}
